# echohaven

./: .gitignore  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.github/workflows/: build-desktop.yml  ci.yml
docs/: features.md  gitee-github-dual-remote.md  github-actions-build-desktop.md  introduction.md  rustup-toolchain.md  storage-design.md  vault-format-v1.md  windows-build-from-mac.md
scripts/: render-app-icon.py
src/: App.tsx  api.ts  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  vault.rs
src/app/: VaultAppShell.tsx  vaultRouter.tsx
src/components/: AuthFlow.tsx
src/contexts/: vaultUi.tsx
src/features/entry/: EntryForm.tsx  reminder.ts
src/features/tags/: TagPresetsPanel.tsx
src/hooks/: useAutoLock.ts  useReminderPoller.ts  useVaultClipboard.ts
src/pages/: EntryDetailPage.tsx  EntryListPage.tsx  EntryNewPage.tsx  SettingsPage.tsx
src/utils/: passwordGen.ts  vaultPaths.ts
