[package]
name = "echohaven"
version = "0.1.0"
description = "余音 echohaven — 本地密码管理与提醒"
authors = ["echohaven"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "echohaven_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
subtle = "2"
[dev-dependencies]
tempfile = "3"
